--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -210,11 +210,11 @@ input[type="number"]:focus {
     }
 
     .icon {
-      color: var(--secondary);
+      color: var(--primary);
     }
 
     .step-name {
-      color: var(--secondary);
+      color: var(--primary);
       display: block;
     }
   }
